[tool.poetry]
name = "gcodeconverter"
version = "0.1.0"
description = ""
authors = ["Austin Barner <abarner99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
